src/paths/snapshots/mandala__shapes__lines__line_tests__f32-3d-line.snap
---
source: src/shapes/lines.rs
expression: "[line.eval(0.0), line.eval(0.5), line.eval(1.0)]"
---
[
    Vector3 {
        x: 0.0,
        y: 0.0,
        z: 0.0,
    },
    Vector3 {
        x: 0.5,
        y: 0.5,
        z: 0.5,
    },
    Vector3 {
        x: 1.0,
        y: 1.0,
        z: 1.0,
    },
]
