src/paths/snapshots/mandala__shapes__lines__line_tests__f64-2d-line.snap
---
source: src/shapes/lines.rs
expression: "[line.eval(0.0), line.eval(0.5), line.eval(1.0)]"
---
[
    Vector2 {
        x: 0.0,
        y: 0.0,
    },
    Vector2 {
        x: 0.5,
        y: 0.5,
    },
    Vector2 {
        x: 1.0,
        y: 1.0,
    },
]
